--- a/CSS/style.css
+++ b/CSS/style.css
@@ -228,9 +228,7 @@ img {
     padding: 0 3rem;
 }
 
-.testimonials__card-last {
-    
-}
+
 
 .testimonials__image img {
     width: 96px;
@@ -312,42 +310,9 @@ img {
 
 }
 
-/* Media queries */
 
-@media (max-width: 992px) {
-    .hero {
-        padding: 10rem;
-        text-align: center;
 
-    }
 
-    .hero__container {
-        flex-direction: column;
-    }
-
-    .hero__title {
-        font-size: 2.3rem;
-    }
-
-    .hero__buttons {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .hero__button {
-        width: 100%;
-    }
-
-    .hero__image img {
-        max-width: 350px;
-    }
-
-    .testimonials__container {
-        grid-template-columns: repeat(3,1fr);
-    
-    }
-
-  
     /** features **/
 
     .features__grid {
@@ -383,20 +348,423 @@ img {
 
 }
 
-@media (max-width: 768px) {
-    .navbar__menu {
-        display: none;
-    }
 
-    .navbar__mobile-menu {
-        display: block;
-    
-    }
+/* Details */
+.details {
+    padding: 9rem 2rem;
+  }
+  
+  .details__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .details__grid-content {
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .details__grid-heading {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    line-height: 1.2;
+  }
+  
+  .details__grid-description {
+    line-height: 1.6;
+    margin-bottom: 2rem;
+  }
+  
+  /* Details Icons */
+  .details__icons {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 8rem;
+    gap: 2rem;
+    justify-content: space-around;
+    text-align: center;
+  }
+  
+  .details__icons i {
+    color: var(--primary-color);
+    margin-bottom: 1rem;
+  }
+  
+  .details__icons-amount {
+    font-size: 3.5rem;
+    font-weight: 600;
+  }
+  
+  .details__icons-title {
+    font-size: 1.3rem;
+    font-weight: 400;
+  }
+  
+  /* Screenshots */
+  .screenshots {
+    padding: 6rem 2rem;
+    background: var(--tertiary-color);
+    text-align: center;
+  }
 
-    .testimonials__container {
-        grid-template-columns: 1fr;
-    
+  
+  .screenshots__container {
+    max-width: 1200px;
+  }
+  
+  .screenshots__title {
+    font-size: 2.3rem;
+    text-transform: uppercase;
+    border-bottom: 2px solid var(--primary-color);
+    width: 600px;
+    margin: 0 auto 2.5rem;
+    @media (max-width: 768px) {
+      width: 200px;
     }
-
 }
+  
+  .screenshots__images {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
+  
+  .screenshots__images img {
+    width: 100%;
+    max-width: 200px;
+    margin: 0 auto;
+  }
+
+
+
+  /* Footer */
+.footer {
+    background: var(--tertiary-color);
+    color: #9f9caf;
+    padding: 4rem 2rem;
+    font-size: 0.9rem;
+  }
+  
+  .footer__links-link,
+  .footer__social-link {
+    color: #9f9caf;
+  }
+  
+  .footer__links-link:hover,
+  .footer__social-link:hover {
+    color: #fff;
+  }
+  
+  .footer__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+    align-items: center;
+    gap: 6rem;
+  }
+  
+  .footer__title {
+    font-size: 1.2rem;
+    color: #fff;
+    margin-bottom: 0.5rem;
+  }
+  
+  .footer__social {
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+  }
+  
+  /* Inner Header */
+  .inner-header {
+    background: #000 url('../images/header-background.jpg') center center/cover
+      no-repeat;
+    padding: 10rem 2rem 6rem;
+  }
+
+  
+  /* Pricing */
+  .pricing {
+    background: var(--tertiary-color);
+    padding: 4rem 2rem 6rem;
+  }
+  
+  .pricing__title {
+    font-size: 2.3rem;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  
+  .pricing__cards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    gap: 2rem;
+  }
+  
+  .pricing__card-box {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 2.5rem;
+    border-radius: 30px;
+    margin-bottom: 2rem;
+  }
+  
+  .pricing__card-title {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+  
+  .pricing__card-price {
+    font-size: 3rem;
+    color: var(--primary-color);
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+  
+  .pricing__card-list {
+    text-align: left;
+    line-height: 2.5rem;
+    font-weight: 300;
+  }
+  
+  .pricing__card-item i {
+    color: var(--primary-color);
+    margin-right: 0.5rem;
+  }
+  
+  /* Pricing Notes */
+  .pricing-notes {
+    padding: 3rem 2rem;
+    color: #9f9caf;
+    text-align: center;
+  }
+  
+  /* Details Features */
+  .details-features {
+    background: var(--tertiary-color);
+    padding: 4rem 2rem;
+  }
+  
+  .details-features__title {
+    font-size: 2.3rem;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  
+  .details-features__list-item {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    margin-bottom: 3.5rem;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 1.5rem;
+    border-radius: 20px;
+  }
+  
+  .details-features__list-item i {
+    color: var(--primary-color);
+  }
+  
+  .details-features__list-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+  }
+  
+  
+/* Media Queries */
+@media (max-width: 992px) {
+    /* Hero */
+    .hero {
+      padding: 10rem;
+      text-align: center;
+    }
+  
+    .hero__container {
+      flex-direction: column;
+    }
+  
+    .hero__title {
+      font-size: 2.3rem;
+    }
+  
+    .hero__buttons {
+      flex-direction: column;
+      gap: 1rem;
+    }
+  
+    .hero__button {
+      width: 100%;
+    }
+  
+    .hero__image img {
+      max-width: 350px;
+    }
+  
+    /* Testimonials */
+    .testimonials__container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  
+    .testimonials__card {
+      padding: 0 1.5rem;
+    }
+  
+    .testimonials__card:nth-child(3) {
+      display: none;
+    }
+  
+    /* Features */
+    .features__grid {
+      grid-template-columns: 1fr;
+    }
+  
+    .features__grid-column-left,
+    .features__grid-column-right {
+      order: 2;
+      margin-bottom: 2rem;
+    }
+  
+    .features__grid-column-center {
+      order: 1;
+      margin-bottom: 3rem;
+    }
+  
+    .features__grid-item,
+    .features__grid-column-right .features__grid-item {
+      text-align: center;
+      flex-direction: column-reverse;
+      max-width: 400px;
+    }
+  
+    .features__grid-item-icon {
+      margin: 0 auto;
+    }
+  
+    .features__grid-column-center img {
+      max-width: 300px;
+    }
+  
+    /* Details */
+    .details__grid {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+  
+    .details__grid-image img {
+      width: 100%;
+      max-width: 400px;
+    }
+  
+    .details__grid-content {
+      width: 100%;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+  
+    .details__icons {
+      flex-direction: column;
+      gap: 2rem;
+      margin-top: 4rem;
+    }
+  
+    /* Download */
+    .download {
+      padding-top: 10rem;
+      text-align: center;
+    }
+  
+    .download__container {
+      flex-direction: column-reverse;
+    }
+  
+    .download__buttons {
+      flex-direction: column;
+    }
+  
+    .download__button {
+      width: 100%;
+      padding: 0.7rem;
+    }
+  
+    /* Footer */
+    .footer {
+      font-size: 1rem;
+    }
+  
+    .footer__container {
+      grid-template-columns: 1fr;
+      text-align: center;
+      gap: 3rem;
+      max-width: 600px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    /* Navbar */
+    .navbar__menu {
+      display: none;
+    }
+  
+    .navbar__mobile-menu {
+      display: block;
+    }
+  
+    /* Testimonials */
+    .testimonials__container {
+      grid-template-columns: 1fr;
+    }
+  
+    .testimonials__card:nth-child(2) {
+      display: none;
+    }
+  
+    /* Video Modal */
+    .modal__content {
+      margin: 40% auto;
+      padding: 10px;
+      width: 90%;
+    }
+  
+    .modal__content iframe {
+      width: 100%;
+    }
+  
+    /* Pricing */
+    .pricing__cards {
+      flex-direction: column;
+    }
+  
+    .pricing__card {
+      margin-bottom: 4.5rem;
+    }
+  
+    /* Details Features */
+    .details-features__list-item {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
