fixed hero background image

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -156,7 +156,7 @@ img {
 /* Hero*/
 
 .hero {
-    background: #000 url(images/header-background.jpg) 
+    background: #000 url('../images/header-background.jpg') 
     center center/cover no-repeat;
     padding: 11.5rem 2rem 8rem;
 }
